--- a/src/my-app.html
+++ b/src/my-app.html
@@ -19,11 +19,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
+<link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
+<link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="my-icons.html">
-<link rel="lazy-import" href="my-view1.html">
-<link rel="lazy-import" href="my-view2.html">
-<link rel="lazy-import" href="my-view3.html">
-<link rel="lazy-import" href="my-view404.html">
+<link rel="import" href="looper-page/looper-page.html">
+<link rel="lazy-import" href="page-markets.html">
+<link rel="lazy-import" href="page-wallet.html">
+<link rel="lazy-import" href="page-mywallet.html">
+<link rel="lazy-import" href="page-404.html">
 <dom-module id="my-app">
   <template>
     <style>
@@ -68,32 +72,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </app-location>
     <app-route route="{{route}}" pattern="[[rootPath]]:page" data="{{routeData}}" tail="{{subroute}}">
     </app-route>
-    <app-drawer-layout fullbleed narrow="{{narrow}}">
-      <!-- Drawer content -->
-      <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-        <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="[[rootPath]]view1">View One</a>
-          <a name="view2" href="[[rootPath]]view2">View Two</a>
-          <a name="view3" href="[[rootPath]]view3">View Three</a>
-        </iron-selector>
-      </app-drawer>
-      <!-- Main content -->
-      <app-header-layout has-scrolling-region>
-        <app-header slot="header" condenses reveals effects="waterfall">
-          <app-toolbar>
-            <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
-          </app-toolbar>
-        </app-header>
-        <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-view404 name="view404"></my-view404>
-        </iron-pages>
-      </app-header-layout>
-    </app-drawer-layout>
+    <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
+      <page-markets name="markets"></page-markets>
+      <page-wallet name="market"></page-wallet>
+      <page-mywallet name="mywallet"></page-mywallet>
+      <page-404 name="404"></page-404>
+    </iron-pages>
   </template>
   <script>
   class MyApp extends Polymer.Element {
@@ -123,7 +107,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     _routePageChanged(page) {
       // If no page was found in the route data, page will be an empty string.
       // Default to 'view1' in that case.
-      this.page = page || 'view1';
+      this.page = page || 'markets';
 
       // Close a non-persistent drawer when the page & route are changed.
       if (!this.$.drawer.persistent) {
@@ -133,7 +117,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     _pageChanged(page) {
       // Load page import on demand. Show 404 page if fails
-      var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+      var resolvedPageUrl = this.resolveUrl('page-' + page + '.html');
       Polymer.importHref(
         resolvedPageUrl,
         null,
@@ -142,7 +126,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     _showPage404() {
-      this.page = 'view404';
+      this.page = '404';
     }
   }
 
