--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -9,26 +9,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<dom-module id="my-view1">
+<dom-module id="page-markets">
   <template>
     <style include="shared-styles">
      :host {
       display: block;
-
       padding: 10px;
     }
     </style>
-    <div class="card">
-      <div class="circle">1</div>
-      <h1>View One</h1>
-      <p>Ut labores minimum atomorum pro. Laudem tibique ut has.</p>
-      <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
-    </div>
+    <looper-page has-toolbar>
+      <div class="card">
+        <div class="circle">1</div>
+        <h1>Markets</h1>
+      </div>
+    </looper-page>
   </template>
   <script>
-    
   class MyView1 extends Polymer.Element {
-    static get is() { return 'my-view1'; }
+    static get is() { return 'page-markets'; }
   }
 
   window.customElements.define(MyView1.is, MyView1);
