--- a/src/page-mywallet.html
+++ b/src/page-mywallet.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<dom-module id="my-view2">
+<dom-module id="page-mywallet">
   <template>
     <style include="shared-styles">
      :host {
@@ -18,18 +18,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding: 10px;
     }
     </style>
-    <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
-    </div>
+    <looper-page has-toolbar>
+      <div class="card">
+        <div class="circle">1</div>
+        <h1>MyWallet</h1>
+      </div>
+    </looper-page>
   </template>
   <script>
-  class MyView2 extends Polymer.Element {
-    static get is() { return 'my-view2'; }
+  class MyView3 extends Polymer.Element {
+    static get is() { return 'page-mywallet'; }
   }
 
-  window.customElements.define(MyView2.is, MyView2);
+  window.customElements.define(MyView3.is, MyView3);
   </script>
 </dom-module>
