--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -14,8 +14,8 @@
       <app-drawer no-focus-trap slot="drawer">
         <app-toolbar>Menu</app-toolbar>
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="markets" href="[[rootPath]]markets">View One</a>
-          <a name="mywallet" href="[[rootPath]]mywallet">View Two</a>
+          <a name="markets" href="#markets">View One</a>
+          <a name="mywallet" href="#mywallet">View Two</a>
         </iron-selector>
       </app-drawer>
       <app-header-layout>
