--- a/src/my-app.html
+++ b/src/my-app.html
@@ -23,6 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
 <link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="my-icons.html">
+<link rel="import" href="looper-page/looper-toolbar.html">
 <link rel="import" href="looper-page/looper-page.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-wallet.html">
