--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -12,7 +12,7 @@
     </style>
     <app-drawer-layout fullbleed force-narrow>
       <app-drawer no-focus-trap slot="drawer">
-        <app-toolbar>Menu</app-toolbar>
+       
         <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
           <a name="markets" href="#markets">View One</a>
           <a name="mywallet" href="#mywallet">View Two</a>
@@ -20,30 +20,23 @@
       </app-drawer>
       <app-header-layout>
         <app-header reveals effects="waterfall" slot="header">
-          <app-toolbar>
-            <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
-            <div main-title>Title</div>
-          </app-toolbar>
+          <slot name="main-toolbar"></slot>
+          
         </app-header>
         <slot></slot>
       </app-header-layout>
     </app-drawer-layout>
   </template>
   <script>
-  class PageLayout extends Polymer.Element {
+  class LooperPage extends Polymer.Element {
     static get is() { return 'looper-page'; }
 
     static get properties() {
       return {
-        hasToolbar: {
-          type: Boolean,
-          reflectToAttribute: true,
-          value: false
-        }
       };
     }
   }
 
-  window.customElements.define(PageLayout.is, PageLayout);
+  window.customElements.define(LooperPage.is, LooperPage);
   </script>
 </dom-module>
