--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -17,7 +17,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       padding: 10px;
     }
     </style>
-    <looper-page has-toolbar>
+    <looper-page>
+      <looper-toolbar slot="main-toolbar">
+        <paper-icon-button slot="drawer-toggle" icon="menu" drawer-toggle></paper-icon-button>
+      </looper-toolbar>
       <div class="card">
         <div class="circle">1</div>
         <h1>Markets</h1>
