--- a/src/page-404.html
+++ b/src/page-404.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     Oops you hit a 404. <a href="[[rootPath]]">Head back to home.</a>
   </template>
   <script>
-  class MyView404 extends Polymer.Element {
+  class Page404 extends Polymer.Element {
     static get is() { return 'page-404'; }
     static get properties() {
       return {
@@ -31,6 +31,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
   }
 
-  window.customElements.define(MyView404.is, MyView404);
+  window.customElements.define(Page404.is, Page404);
   </script>
 </dom-module>
