--- a/src/page-mywallet.html
+++ b/src/page-mywallet.html
@@ -29,10 +29,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </looper-page>
   </template>
   <script>
-  class MyView3 extends Polymer.Element {
+  class PageMyWallet extends Polymer.Element {
     static get is() { return 'page-mywallet'; }
   }
 
-  window.customElements.define(MyView3.is, MyView3);
+  window.customElements.define(PageMyWallet.is, PageMyWallet);
   </script>
 </dom-module>
