--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -12,15 +12,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="shared-styles">
   <template>
     <style>
-    .card {
-      margin: 24px;
-      padding: 16px;
-      color: #757575;
-      border-radius: 5px;
-      background-color: #fff;
-      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    }
-
     .circle {
       display: inline-block;
       width: 64px;
@@ -37,6 +28,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin: 16px 0;
       color: #212121;
       font-size: 22px;
+    }
+
+    .sections {
+      @apply --layout-center;
+      @apply --layout-vertical;
+      background-color: #eeeeee;
+      width: 100%;
+    }
+
+    .sections>paper-card {
+      width: 100%;
+      margin: 10px 0 10px 0;
+    }
+
+    @media(min-width:1024px) {
+      .sections>paper-card {
+        width: 1024px;
+      }
     }
     </style>
   </template>
