--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="looper-page" fit>
   <template>
-    <style>
-     :host {
+    <style include="shared-styles">
+    <style> :host {
       display: block;
     }
     </style>
