--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -21,8 +21,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </style>
     <looper-page>
-      <looper-toolbar slot="main-toolbar">
-        <paper-icon-button slot="drawer-toggle" icon="menu" drawer-toggle></paper-icon-button>
+      <looper-toolbar slot="main-toolbar" active-tab="markets">
+        <paper-icon-button icon="menu" drawer-toggle></paper-icon-button>
       </looper-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
@@ -38,11 +38,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
         </paper-card>
       </div>
-      <!--      <div class="card">
-        <div class="circle">1</div>
-        <h1>Markets</h1>
-
-      </div> -->
     </looper-page>
   </template>
   <script>
