--- a/src/my-app.html
+++ b/src/my-app.html
@@ -34,6 +34,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="looper-page/looper-page.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
+<link rel="lazy-import" href="page-rings.html">
+<link rel="lazy-import" href="page-ring.html">
+<link rel="lazy-import" href="page-orders.html">
+<link rel="lazy-import" href="page-order.html">
+<link rel="lazy-import" href="page-fills.html">
+<link rel="lazy-import" href="page-fill.html">
 <link rel="lazy-import" href="page-mywallet.html">
 <link rel="lazy-import" href="page-404.html">
 <dom-module id="my-app">
@@ -85,6 +91,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <page-market name="market"></page-market>
       <page-markets name="markets"></page-markets>
       <page-mywallet name="mywallet"></page-mywallet>
+      <page-rings name="rings"></page-rings>
+      <page-ring name="ring"></page-ring>
+      <page-orders name="orders"></page-orders>
+      <page-order name="order"></page-order>
+      <page-fills name="fills"></page-fills>
+      <page-fill name="fill"></page-fill>
       <page-404 name="404"></page-404>
     </iron-pages>
   </template>
