--- a/src/page-markets.html
+++ b/src/page-markets.html
@@ -26,15 +26,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </looper-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
+          <div class="card-content">
+            <a href="#market">LRC/ETH</a>
           </div>
         </paper-card>
         <paper-card heading="Card Title">
           <div class="card-content">Some content</div>
           <div class="card-actions">
-            <paper-button>Some action</paper-button>
           </div>
         </paper-card>
       </div>
