--- a/src/page-orders.html
+++ b/src/page-orders.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<dom-module id="page-market">
+<dom-module id="page-orders">
   <template>
     <style include="shared-styles">
      :host {
@@ -17,28 +17,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <simple-toolbar slot="main-toolbar" title="Market" back-link="#markets"></simple-toolbar>
+      <simple-toolbar slot="main-toolbar" title="Orders" back-link="#markets"></simple-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
+          <div class="card-content">
+            <a href="#order">order 1</a>
           </div>
         </paper-card>
         <paper-card heading="Card Title">
           <div class="card-content">Some content</div>
           <div class="card-actions">
-            <paper-button>Some action</paper-button>
           </div>
         </paper-card>
       </div>
     </looper-page>
   </template>
   <script>
-  class PageMarket extends Polymer.Element {
-    static get is() { return 'page-market'; }
+  class PageOrders extends Polymer.Element {
+    static get is() { return 'page-orders'; }
   }
 
-  window.customElements.define(PageMarket.is, PageMarket);
+  window.customElements.define(PageOrders.is, PageOrders);
   </script>
 </dom-module>
