--- a/src/page-ring.html
+++ b/src/page-ring.html
@@ -9,7 +9,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<dom-module id="page-market">
+<dom-module id="page-ring">
   <template>
     <style include="shared-styles">
      :host {
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <simple-toolbar slot="main-toolbar" title="Market" back-link="#markets"></simple-toolbar>
+      <simple-toolbar slot="main-toolbar" title="Ring" back-link="#rings"></simple-toolbar>
       <div class="sections">
         <paper-card heading="Card Title">
           <div class="card-content">Some content</div>
@@ -35,10 +35,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </looper-page>
   </template>
   <script>
-  class PageMarket extends Polymer.Element {
-    static get is() { return 'page-market'; }
+  class PageRing extends Polymer.Element {
+    static get is() { return 'page-ring'; }
   }
 
-  window.customElements.define(PageMarket.is, PageMarket);
+  window.customElements.define(PageRing.is, PageRing);
   </script>
 </dom-module>
