--- a/src/my-app.html
+++ b/src/my-app.html
@@ -16,14 +16,32 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="../bower_components/app-route/app-route.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
+<link ref="import" href="../bower_components/polymer/lib/elements/dom-if.html">
+<link ref="import" href="../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="my-icons.html">
-<link rel="lazy-import" href="my-view1.html">
-<link rel="lazy-import" href="my-view2.html">
-<link rel="lazy-import" href="my-view3.html">
-<link rel="lazy-import" href="my-view404.html">
+<link rel="import" href="looper-page/looper-toolbar.html">
+<link rel="import" href="looper-page/simple-toolbar.html">
+<link rel="import" href="looper-page/looper-page.html">
+<link rel="lazy-import" href="page-markets.html">
+<link rel="lazy-import" href="page-market.html">
+<link rel="lazy-import" href="page-rings.html">
+<link rel="lazy-import" href="page-ring.html">
+<link rel="lazy-import" href="page-orders.html">
+<link rel="lazy-import" href="page-order.html">
+<link rel="lazy-import" href="page-fills.html">
+<link rel="lazy-import" href="page-fill.html">
+<link rel="lazy-import" href="page-mywallet.html">
+<link rel="lazy-import" href="page-404.html">
 <dom-module id="my-app">
   <template>
     <style>
@@ -64,36 +82,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       font-weight: bold;
     }
     </style>
-    <app-location route="{{route}}" url-space-regex="^[[rootPath]]">
+    <app-location use-hash-as-path route="{{route}}">
     </app-location>
-    <app-route route="{{route}}" pattern="[[rootPath]]:page" data="{{routeData}}" tail="{{subroute}}">
+    <app-route route="{{route}}" pattern=":page" data="{{routeData}}" tail="{{subroute}}">
+
     </app-route>
-    <app-drawer-layout fullbleed narrow="{{narrow}}">
-      <!-- Drawer content -->
-      <app-drawer id="drawer" slot="drawer" swipe-open="[[narrow]]">
-        <app-toolbar>Menu</app-toolbar>
-        <iron-selector selected="[[page]]" attr-for-selected="name" class="drawer-list" role="navigation">
-          <a name="view1" href="[[rootPath]]view1">View One</a>
-          <a name="view2" href="[[rootPath]]view2">View Two</a>
-          <a name="view3" href="[[rootPath]]view3">View Three</a>
-        </iron-selector>
-      </app-drawer>
-      <!-- Main content -->
-      <app-header-layout has-scrolling-region>
-        <app-header slot="header" condenses reveals effects="waterfall">
-          <app-toolbar>
-            <paper-icon-button icon="my-icons:menu" drawer-toggle></paper-icon-button>
-            <div main-title>My App</div>
-          </app-toolbar>
-        </app-header>
-        <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="view404" role="main">
-          <my-view1 name="view1"></my-view1>
-          <my-view2 name="view2"></my-view2>
-          <my-view3 name="view3"></my-view3>
-          <my-view404 name="view404"></my-view404>
-        </iron-pages>
-      </app-header-layout>
-    </app-drawer-layout>
+    <iron-pages selected="[[page]]" attr-for-selected="name" fallback-selection="404" role="main">
+      <page-market name="market"></page-market>
+      <page-markets name="markets"></page-markets>
+      <page-mywallet name="mywallet"></page-mywallet>
+      <page-rings name="rings"></page-rings>
+      <page-ring name="ring"></page-ring>
+      <page-orders name="orders"></page-orders>
+      <page-order name="order"></page-order>
+      <page-fills name="fills"></page-fills>
+      <page-fill name="fill"></page-fill>
+      <page-404 name="404"></page-404>
+    </iron-pages>
   </template>
   <script>
   class MyApp extends Polymer.Element {
@@ -121,19 +126,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     _routePageChanged(page) {
-      // If no page was found in the route data, page will be an empty string.
-      // Default to 'view1' in that case.
-      this.page = page || 'view1';
-
-      // Close a non-persistent drawer when the page & route are changed.
-      if (!this.$.drawer.persistent) {
-        this.$.drawer.close();
-      }
+      console.log("new page: " + page);
+      this.page = page || 'markets';
     }
 
     _pageChanged(page) {
       // Load page import on demand. Show 404 page if fails
-      var resolvedPageUrl = this.resolveUrl('my-' + page + '.html');
+      var resolvedPageUrl = this.resolveUrl('page-' + page + '.html');
       Polymer.importHref(
         resolvedPageUrl,
         null,
@@ -142,7 +141,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     _showPage404() {
-      this.page = 'view404';
+      this.page = '404';
     }
   }
 
