--- a/src/page-orders.html
+++ b/src/page-orders.html
@@ -9,27 +9,34 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
-<dom-module id="my-view2">
+<dom-module id="page-orders">
   <template>
     <style include="shared-styles">
      :host {
       display: block;
-
-      padding: 10px;
     }
     </style>
-    <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
-    </div>
+    <looper-page>
+      <simple-toolbar slot="main-toolbar" title="Orders" back-link="#markets"></simple-toolbar>
+      <div class="sections">
+        <paper-card heading="Card Title">
+          <div class="card-content">
+            <a href="#order">order 1</a>
+          </div>
+        </paper-card>
+        <paper-card heading="Card Title">
+          <div class="card-content">Some content</div>
+          <div class="card-actions">
+          </div>
+        </paper-card>
+      </div>
+    </looper-page>
   </template>
   <script>
-  class MyView2 extends Polymer.Element {
-    static get is() { return 'my-view2'; }
+  class PageOrders extends Polymer.Element {
+    static get is() { return 'page-orders'; }
   }
 
-  window.customElements.define(MyView2.is, MyView2);
+  window.customElements.define(PageOrders.is, PageOrders);
   </script>
 </dom-module>
