--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -11,7 +11,7 @@
     }
 
     a[active]>paper-button {
-      background-color: red;
+      background-color: var(--google-blue-500);
     }
     </style>
     <paper-toolbar class="medium-tall">
