--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -48,6 +48,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin: 10px 0 10px 0;
     }
 
+    paper-icon-button:hover {
+      /*background-color: blue;*/
+      background-color: var(--google-blue-500);
+    }
+
     paper-button {
       text-transform: none;
       border-radius: 0;
